--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
   });
   }
 </script>
+<div class="container">
+  <h1>Button for ESp32 x</h1>
+  <button type="submit" class="btn btn-info" onclick="getblynk()">Click Me!</button>
+</div>
+
+<script>
+  function getblynk(){
+  $.get("https://blynk.cloud/external/api/update?token=rKOgUiuZz1yriWCRxr183nzBE7W77iXB&V1=0", (data, status) => {
+    console.log(data);
+  });
+  }
+</script>
 
 </body>
 </html>
